# thcon

./: .cirrus.yaml  .gitignore  .golangci.yaml  AUTHORS  BUILDING.md  CHANGELOG.md  Cargo.toml  Earthfile  LICENSE  README.md  build.rs  go.mod  go.sum  main.go
.github/workflows/: go.yaml  pages.yaml  push.yaml
cmd/: listen.go  root.go  switch.go
docs/: alacritty.md  app_template.md  eleventy.config.js  package.json  pnpm-lock.yaml  vscode.md
docs-site/: .gitignore  README.md  package.json  vuepress.config.js
docs-site/.vuepress/theme/: index.js
docs-site/.vuepress/theme/layouts/: Layout.vue
docs-site/docs/: README.md  guide.md  quick-start.md
docs-site/docs/app/: alacritty.md  atom.md  gnome-shell.md  gnome-terminal.md  gtk.md  iterm2.md  konsole.md  macos.md  plasma.md  sublime-text-3.md  sublime-text-4.md  terminal.app.md  vim.md  vscode.md
docs/_includes/layouts/: app.html  category-list.html  main.html  platform-list.html
docs/_includes/partials/: footer.html
docs/content/: changelog.11tydata.js  changelog.md  index.md  install.md  prior-art.md  sample.md  usage.md
docs/content/apps/: alacritty.md  custom.md  emacs.md  gnome-shell.md  gnome-terminal.md  gtk.md  helix.md  index.html  index.md  iterm2.md  kitty.md  konsole.md  macos.md  neovim.md  plasma.md  terminal-app.md  vim.md
docs/public/: a11y-dark.css  a11y-light.css  base2tone-evening-dark.css  base2tone-evening-light.css  base2tone-pool-dark.css  base2tone-pool-light.css  gnome-terminal-preferences.avif  style.css
lib/: switch.go
lib/apps/: alacritty.go  app.go  apps_common.go  apps_darwin.go  apps_freebsd.go  apps_linux.go  config_common.go  config_darwin.go  config_freebsd.go  config_linux.go  config_test.go  emacs.go  gnome-shell.go  gnome-terminal.go  gnome_shell.go  gnome_shell_test.go  gnome_terminal.go  gnome_terminal_test.go  gtk.go  gtk3.go  gtk3_test.go  helix.go  iterm2.go  kitty.go  konsole.go  konsole_test.go  macos.go  plasma.go  plasma_test.go  terminal_dot_app.go  vim.go  vim_test.go  x.go
lib/apps/iterm2pb/: auth.go  client.go  iterm2pb_darwin.go
lib/config/: common.go  config_darwin.go  config_linux.go  config_test.go
lib/event/: progress.go
lib/health/: health.go  validators.go
lib/ipc/: addresses.go  client.go  server.go
lib/operation/: operation.go
lib/util/: files.go  log.go  paths.go  symlink.go
src/: app.rs  config.rs  dirs.rs  lib.rs  main.rs  operation.rs  sockets.rs  thcon.rs  themeable.rs
src/app/: alacritty.rs  atom.rs  gnome_terminal.rs  iterm2.rs  konsole.rs  macos.rs  plasma.rs  sublime_text.rs  vim.rs  vscode.rs
src/thcon/: app.rs  themeable.rs
src/thcon/app/: gnome_terminal.rs  konsole.rs
support/: is-not-cross-compiling.sh  maybe-upload-artifact.sh
thcon/: Cargo.toml
thcon/src/: app.rs  config.rs  lib.rs  operation.rs  sockets.rs  switch.rs  themeable.rs
thcon/src/app/: alacritty.rs  atom.rs  gnome_shell.rs  gnome_terminal.rs  gtk.rs  iterm2.rs  konsole.rs  macos.rs  plasma.rs  sublime_text.rs  terminal_dot_app.rs  vim.rs  vscode.rs  windows.rs
thcon_macro/: Cargo.toml
thcon_macro/src/: lib.rs
thcon_trait/: Cargo.toml
thcon_trait/src/: lib.rs
