[package]
name = "thcon"
version = "0.1.0"
authors = ["Sean Barag <sean@barag.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dbus = "0.9.0"
xml-rs = "0.8"
rayon = "1.4.1"
indicatif =  { version = "0.15.0", features = ["rayon"] }
dirs = "3.0.1"
regex = "1"