[package]
name = "thcon"
version = "0.4.0"
authors = ["Sean Barag <sean@barag.org>"]
description = "A configurable theme controller that switches multiple apps between light and dark mode"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfg_aliases = "0.1.1"

[dependencies]
clap = "2.33.3"
xml-rs = "0.8"
rayon = "1.4.1"
indicatif =  { version = "0.15.0", features = ["rayon"] }
dirs = "3.0.1"
regex = "1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.61"
toml = "0.5.7"

[target.'cfg(not(windows))'.dependencies]
xdg = "2.2.0"

[target.'cfg(any(target_os="linux",target_os="freebsd",target_os="dragonfly",target_os="openbsd",target_os="netbsd"))'.dependencies]
dbus = "0.9.0"
