[package]
name = "thcon"
version = "0.12.0"
authors = ["Sean Barag <sean@barag.org>"]
edition = "2018"
description = "A configurable theme controller that switches multiple apps between light and dark mode"
homepage = "https://thcon.vercel.app"
repository = "https://github.com/theme-controller/thcon"
license = "MIT OR Apache-2.0"
default-run = "thcon"

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
cfg_aliases = "0.1.1"

[dependencies]
thcon_trait = { version = "0.1.0", path = "../thcon_trait" }
thcon_macro = { version = "0.1.0", path = "../thcon_macro" }
log = "0.4"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
clap = { version = "2.33.3", features = ["wrap_help"] }
xml-rs = "0.8"
rayon = "1.4.1"
dirs = "3.0.1"
regex = "1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.61"
toml = "0.5.7"
exitcode = "1.1.2"
either = { version = "1.6.1", features = ["serde"] }
thiserror = "1.0.25"
anyhow = "1.0"

[target.'cfg(not(windows))'.dependencies]
xdg = "2.2.0"
async-std = "1.9.0"
signal-hook = "0.3.4"
signal-hook-async-std = "0.2.1"

[target.'cfg(any(target_os="linux",target_os="freebsd",target_os="dragonfly",target_os="openbsd",target_os="netbsd"))'.dependencies]
dbus = "0.9.0"
gio = "0.9.1"
