[package]
name = "thcon_macro"
version = "0.1.0"
authors = ["Sean Barag <sean@barag.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
thcon_trait = { path = "../thcon_trait" }
syn = "1.0.72"
quote = "1.0.9"
proc-macro2 = "1.0.26"
